[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/wall2.png" type="Texture" id=1]
[ext_resource path="res://P2.tscn" type="PackedScene" id=2]
[ext_resource path="res://ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://P1.tscn" type="PackedScene" id=4]
[ext_resource path="res://scoreboard.tscn" type="PackedScene" id=5]
[ext_resource path="res://level1.gd" type="Script" id=6]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=4]
0/name = "wall2.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/occluder = SubResource( 2 )
0/navigation_offset = Vector2( 0, 0 )
0/navigation = SubResource( 1 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 3 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 320, 16 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8, 240 )

[sub_resource type="BitmapFont" id=7]

[node name="Level 1" type="Node2D"]
script = ExtResource( 6 )

[node name="Walls" type="StaticBody2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Walls"]
margin_right = 640.0
margin_bottom = 480.0
color = Color( 0.027451, 0.266667, 0.352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tilemap" type="TileMap" parent="Walls"]
tile_set = SubResource( 4 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0 )

[node name="Up" type="CollisionShape2D" parent="Walls"]
position = Vector2( 320, 16 )
shape = SubResource( 5 )

[node name="Up2" type="CollisionShape2D" parent="Walls"]
position = Vector2( 320, 464 )
shape = SubResource( 5 )

[node name="Left" type="Area2D" parent="Walls"]
position = Vector2( -24, 240 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Left"]
position = Vector2( 8, 0 )
shape = SubResource( 6 )

[node name="Right" type="Area2D" parent="Walls"]
position = Vector2( 664, 240 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Right"]
position = Vector2( -8, 0 )
shape = SubResource( 6 )

[node name="scoreboard" parent="." instance=ExtResource( 5 )]
position = Vector2( 320, 80 )
scale = Vector2( 2.875, 3.125 )

[node name="TimerGame" type="Timer" parent="scoreboard"]
wait_time = 30.0
one_shot = true
autostart = true

[node name="P2" parent="." instance=ExtResource( 2 )]
position = Vector2( 624, 256 )

[node name="ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 320, 256 )

[node name="P1" parent="." instance=ExtResource( 4 )]

[node name="endgame" type="RichTextLabel" parent="."]
margin_left = 56.0
margin_top = 144.0
margin_right = 117.0
margin_bottom = 174.0
rect_scale = Vector2( 9, 9 )
custom_fonts/mono_font = SubResource( 7 )
tab_size = 10
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Walls/Left" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="Walls/Left" to="scoreboard" method="_on_Left_body_entered"]
[connection signal="body_entered" from="Walls/Right" to="." method="_on_Right_body_entered"]
[connection signal="body_entered" from="Walls/Right" to="scoreboard" method="_on_Right_body_entered"]
[connection signal="timeout" from="scoreboard/TimerGame" to="." method="_on_TimerGame_timeout"]
